@@ -1,5 +1,7 @@
-22 Apr 2009 - trunk
+20 May 2009 - trunk
 -------------------
+
+ * Correctly resolve chained rule actions in logs.
 
  * Cleanup some code for portability.
 
